slightly smaller max height to avoid scrollbar

--- a/pub/style.css
+++ b/pub/style.css
@@ -165,7 +165,7 @@ video {
 
 div#posts.solo img,
 video {
-    max-height: calc(100vh - 12em);
+    max-height: calc(100vh - 13em);
 }
 
 div#posts.solo div.body {
